--- a/package.json
+++ b/package.json
@@ -89,5 +89,8 @@
     "typescript-eslint": "^8.30.1",
     "vitest": "^3.2.4",
     "yargs": "^17.7.2"
+  },
+  "dependencies": {
+    "openai": "^5.8.2"
   }
 }
